--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,4 +1,10 @@
+  <footer>
+    <ul>
+      <li>link</li>
+      <li>link</li>
+      <li>link</li>
+    </ul>
+  </footer>
   <script src="app.js"></script>
-
   </body>
 </html>
