--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -9,11 +9,11 @@
     </nav>
   </header>
   <section class="home-fold">
-    <h1>STREAMING</h1>
+    <h1 class="fs-display-xl uppercase">STREAMING</h1>
   </section>
 
   <section class="upcoming-events">
-    <h1>Proximos eventos</h1>
+    <h1 class="fs-display-xl uppercase">Proximos eventos</h1>
     <div class="events">
       <div class="event">
         <h2 class="event__title mb-sm">A Chill & Puff</h2>
