--- a/src/scss/commons/_variables-typography.scss
+++ b/src/scss/commons/_variables-typography.scss
@@ -1,5 +1,6 @@
 $font-text:    'SuisseWorks', sans-serif;
 $font-display: 'BureauGrotesque', sans-serif;
+$font-text-condensed: 'SuisseCondensed', sans-serif;
 
 $rem-size: 16px;
 
