footer section added

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -12,12 +12,83 @@
     <h1 class="fs-display-xl uppercase">STREAMING</h1>
   </section>
 
-  <section class="upcoming-events">
-    <h1 class="fs-display-xl uppercase">Proximos eventos</h1>
+  <section class="upcoming-programs">
+    <h1 class="fs-display-xl uppercase mb-md color-yellow">Próximos programas</h1>
     <div class="events">
       <div class="event">
+        <h2 class="event__title mb-sm">La Piñata</h2>
+        <p class="event__subtitle mb-xs">12 marzo | 20:00 · 21:00 | folklore mediterranean world</p>
+        <p class="event__description">Elena Córdoba presenta La Piñata. Sorpresa.</p>
+      </div>
+      <div class="event">
+        <h2 class="event__title mb-sm">Low</h2>
+        <p class="event__subtitle mb-xs">15 marzo | 19:00 · 20:00 | ambient drone post-punk</p>
+        <p class="event__description">Boni G. Miranda presenta Low.</p>
+      </div>
+      <div class="event">
+        <h2 class="event__title mb-sm">Encarta</h2>
+        <p class="event__subtitle mb-xs">22 marzo | 18:00 · 19:00 | electronic beats shoegaze</p>
+        <p class="event__description">Encarta presenta Encarta.</p>
+      </div>
+      <div class="event">
+        <h2 class="event__title mb-sm">La Hora de Nuestra Señora</h2>
+        <p class="event__subtitle mb-xs">31 marzo | 16:00 · 17:00 | industrial wave post-punk electro</p>
+        <p class="event__description">Discos de Nuestra Señora hacen su misa.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="upcoming-events">
+    <h1 class="fs-display-xl uppercase mb-lg">Próximos eventos</h1>
+    <div class="events">
+      <div class="event">
+        <h2 class="event__title mb-sm">Ritual</h2>
+        <p class="event__subtitle mb-xs">24 marzo | 17:00 · 22:00 | ambient mediterranean tribal</p>
+        <p class="event__description">Shibari y música ritual dedicada a las diosas</p>
+      </div>
+      <div class="event">
         <h2 class="event__title mb-sm">A Chill & Puff</h2>
-        <p class="event__subtitle mb-xs">30 DICIEMBRE | 18:30 · 23:00 | WAVE SHOEGAZE POST-PUNK</p>
+        <p class="event__subtitle mb-xs">8 abril | 16:00 · 22:00 | ambient drone fourth-world</p>
+        <p class="event__description">Jornada de ambient en chill constante. No bombos, no prisa, no…</p>
+      </div>
+      <div class="event">
+        <h2 class="event__title mb-sm">Barrio Abierto</h2>
+        <p class="event__subtitle mb-xs">5 mayo | 16:00 · 22:00 | WAVE SHOEGAZE POST-PUNK</p>
+        <p class="event__description">Jornada de ambient en chill constante. No bombos, no prisa, no…</p>
+      </div>
+      <div class="event">
+        <h2 class="event__title mb-sm">Caribe Mix</h2>
+        <p class="event__subtitle mb-xs">31 marzo | 16:00 · 22:00 | WAVE SHOEGAZE POST-PUNK</p>
+        <p class="event__description">Jornada de ambient en chill constante. No bombos, no prisa, no…</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="upcoming-events">
+    <h1 class="fs-display-xl uppercase mb-lg">Proximos eventos</h1>
+    <div class="events">
+
+      <div class="event">
+        <h2 class="event__title mb-sm">Ritual</h2>
+        <p class="event__subtitle mb-xs">24 marzo | 17:00 · 22:00 | ambient mediterranean tribal</p>
+        <p class="event__description">Shibari y música ritual dedicada a las diosas</p>
+      </div>
+
+      <div class="event">
+        <h2 class="event__title mb-sm">A Chill & Puff</h2>
+        <p class="event__subtitle mb-xs">8 abril | 16:00 · 22:00 | ambient drone fourth-world</p>
+        <p class="event__description">Jornada de ambient en chill constante. No bombos, no prisa, no…</p>
+      </div>
+
+      <div class="event">
+        <h2 class="event__title mb-sm">Barrio Abierto</h2>
+        <p class="event__subtitle mb-xs">5 mayo | 16:00 · 22:00 | WAVE SHOEGAZE POST-PUNK</p>
+        <p class="event__description">Jornada de ambient en chill constante. No bombos, no prisa, no…</p>
+      </div>
+
+      <div class="event">
+        <h2 class="event__title mb-sm">Caribe Mix</h2>
+        <p class="event__subtitle mb-xs">31 marzo | 16:00 · 22:00 | WAVE SHOEGAZE POST-PUNK</p>
         <p class="event__description">Jornada de ambient en chill constante. No bombos, no prisa, no…</p>
       </div>
     </div>
