--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,8 +1,9 @@
-  <footer>
+  <footer class="main-footer">
     <ul>
-      <li>link</li>
-      <li>link</li>
-      <li>link</li>
+      <li><a class="footer-link" href="https://www.instagram.com/lieradio/">Instagram</a></li>
+      <li><a class="footer-link" href="https://www.facebook.com/lieradio/">Facebook</a></li>
+      <li><a class="footer-link" href="https://www.mixcloud.com/lieradio/">Mixcloud</a></li>
+      <li><a class="footer-link" href="https://soundcloud.com/lieradio">Soundcloud</a></li>
     </ul>
   </footer>
   <script src="app.js"></script>
