--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,10 +19,11 @@
 @import "components/events";
 @import "components/header";
 @import "components/navigation";
+@import "components/footer";
 
 //SECTIONS
 @import "sections/fold";
-@import "sections/upcoming-events";
+@import "sections/upcoming";
 
 //PAGES
 @import "pages/page-home";
