--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,7 @@
 //SECTIONS
 @import "sections/fold";
 @import "sections/upcoming";
+@import "sections/contact";
 
 //PAGES
 @import "pages/page-home";
