--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -9,7 +9,12 @@
     </nav>
   </header>
   <section class="home-fold">
-    <h1 class="fs-display-xl uppercase">STREAMING</h1>
+    <!-- <h1 class="fs-display-xl uppercase">STREAMING</h1> -->
+    <div id="player"></div>
+
+    <!-- <div style="position:relative;height:0;padding-bottom:56.25%">
+      <iframe src="https://www.youtube.com/embed/r2cmwI8dBt4?ecver=2" style="position:absolute;width:100%;height:100%;left:0" width="640" height="360" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div> -->
   </section>
 
   <section class="upcoming-programs">
@@ -93,6 +98,8 @@
       </div>
     </div>
   </section>
-</main>
+  {{ partial "contact" . }}
+  {{ partial "youtube-player" . }}
 
+</main>
 {{ partial "footer" . }}
