--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -10,11 +10,12 @@
   </header>
   <section class="home-fold">
     <!-- <h1 class="fs-display-xl uppercase">STREAMING</h1> -->
-    <div id="player"></div>
+    <!-- <div id="player"></div> -->
 
-    <!-- <div style="position:relative;height:0;padding-bottom:56.25%">
-      <iframe src="https://www.youtube.com/embed/r2cmwI8dBt4?ecver=2" style="position:absolute;width:100%;height:100%;left:0" width="640" height="360" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div> -->
+    <!-- //EMBED YOUTUBE STREAMING//-->
+    <div style="position:relative;height:0;padding-bottom:56.25%">
+      <iframe width="560" height="349" src="https://www.youtube.com/embed/live_stream?channel=UCuDDLN0G6kPvB0nkh_pZebg" frameborder="0" allowfullscreen></iframe>
+    </div>
   </section>
 
   <section class="upcoming-programs">
@@ -99,7 +100,7 @@
     </div>
   </section>
   {{ partial "contact" . }}
-  {{ partial "youtube-player" . }}
+  <!-- {{ partial "youtube-player" . }} -->
 
 </main>
 {{ partial "footer" . }}
