--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 @import "components/header";
 @import "components/navigation";
 @import "components/footer";
+@import "components/youtube-embed";
 
 //SECTIONS
 @import "sections/fold";
