fix event description

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -66,7 +66,7 @@
             <span>POST-PUNK</span>
           <p>
         </div>
-        <p class="event__description">Discos de Nuestra Señora hacen su misa. Material crudo.</p>
+        <p class="event__description">Boni G. Miranda</p>
       </div>
     </div>
   </section>
