bocadillo god updated

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -22,22 +22,6 @@
     <div class="events">
 
       <div class="event">
-        <h2 class="event__title mb-sm">EL BOCADILLO GOD</h2>
-        <div class="event__subtitle mb-xs">
-          <p class="event__date">22 MARZO</p>
-          <span>|</span>
-          <p class="event__hour">18:00 · 19:00</p>
-          <span>|</span>
-          <p class="event__tags">
-            <span>ELECTRONIC</span>
-            <span>POST-PUNK</span>
-            <span>PSYCHEDELIC</span>
-          <p>
-        </div>
-        <p class="event__description">Banda sonora ideal para una tarde perdida. Los jueves, Encarta reza al dios del bocadillo.</p>
-      </div>
-
-      <div class="event">
         <h2 class="event__title mb-sm">LA HORA DE NUESTRA SEÑORA</h2>
         <div class="event__subtitle mb-xs">
           <p class="event__date">1 ABRIL</p>
@@ -67,6 +51,22 @@
           <p>
         </div>
         <p class="event__description">Boni G. Miranda</p>
+      </div>
+
+      <div class="event">
+        <h2 class="event__title mb-sm">EL BOCADILLO GOD</h2>
+        <div class="event__subtitle mb-xs">
+          <p class="event__date">12 ABRIL</p>
+          <span>|</span>
+          <p class="event__hour">18:00 · 19:30</p>
+          <span>|</span>
+          <p class="event__tags">
+            <span>ELECTRONIC</span>
+            <span>POST-PUNK</span>
+            <span>PSYCHEDELIC</span>
+          <p>
+        </div>
+        <p class="event__description">Banda sonora ideal para una tarde perdida. Los jueves, Encarta reza al dios del bocadillo.</p>
       </div>
     </div>
   </section>
