component card added

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -17,6 +17,134 @@
     </ul>
   </section>
 
+  <section>
+    <div class="container container--medium">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--event">
+            <div class="card__image">
+              <img src="./images/indigo.jpg" alt="indigo">
+            </div>
+            <h2 class="card__title mb-sm">INDIGO</h2>
+            <div class="card__subtitle mb-xs">
+              <p class="card__date">4 ABRIL</p>
+              <span>|</span>
+              <p class="card__hour">19:00 · 20:00</p>
+              <span>|</span>
+              <p class="event__tags">
+                <span>WAVE</span>
+                <span>DRONE</span>
+                <span>POST-PUNK</span>
+              <p>
+            </div>
+            <p class="card__description">Discos de Nuestra Señora hacen su misa. Material crudo.</p>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--event">
+            <div class="card__image">
+              <img src="./images/indigo.jpg" alt="indigo">
+            </div>
+            <h2 class="card__title mb-sm">INDIGO</h2>
+            <div class="card__subtitle mb-xs">
+              <p class="card__date">4 ABRIL</p>
+              <span>|</span>
+              <p class="card__hour">19:00 · 20:00</p>
+              <span>|</span>
+              <p class="event__tags">
+                <span>WAVE</span>
+                <span>DRONE</span>
+                <span>POST-PUNK</span>
+              <p>
+            </div>
+            <p class="card__description">Discos de Nuestra Señora hacen su misa. Material crudo.</p>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--event">
+            <div class="card__image">
+              <img src="./images/indigo.jpg" alt="indigo">
+            </div>
+            <h2 class="card__title mb-sm">INDIGO</h2>
+            <div class="card__subtitle mb-xs">
+              <p class="card__date">4 ABRIL</p>
+              <span>|</span>
+              <p class="card__hour">19:00 · 20:00</p>
+              <span>|</span>
+              <p class="event__tags">
+                <span>WAVE</span>
+                <span>DRONE</span>
+                <span>POST-PUNK</span>
+              <p>
+            </div>
+            <p class="card__description">Discos de Nuestra Señora hacen su misa. Material crudo.</p>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--event">
+            <div class="card__image">
+              <img src="./images/indigo.jpg" alt="indigo">
+            </div>
+            <h2 class="card__title mb-sm">INDIGO</h2>
+            <div class="card__subtitle mb-xs">
+              <p class="card__date">4 ABRIL</p>
+              <span>|</span>
+              <p class="card__hour">19:00 · 20:00</p>
+              <span>|</span>
+              <p class="event__tags">
+                <span>WAVE</span>
+                <span>DRONE</span>
+                <span>POST-PUNK</span>
+              <p>
+            </div>
+            <p class="card__description">Discos de Nuestra Señora hacen su misa. Material crudo.</p>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--event">
+            <div class="card__image">
+              <img src="./images/indigo.jpg" alt="indigo">
+            </div>
+            <h2 class="card__title mb-sm">INDIGO</h2>
+            <div class="card__subtitle mb-xs">
+              <p class="card__date">4 ABRIL</p>
+              <span>|</span>
+              <p class="card__hour">19:00 · 20:00</p>
+              <span>|</span>
+              <p class="event__tags">
+                <span>WAVE</span>
+                <span>DRONE</span>
+                <span>POST-PUNK</span>
+              <p>
+            </div>
+            <p class="card__description">Discos de Nuestra Señora hacen su misa. Material crudo.</p>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="card card--event">
+            <div class="card__image">
+              <img src="./images/indigo.jpg" alt="indigo">
+            </div>
+            <h2 class="card__title mb-sm">INDIGO</h2>
+            <div class="card__subtitle mb-xs">
+              <p class="card__date">4 ABRIL</p>
+              <span>|</span>
+              <p class="card__hour">19:00 · 20:00</p>
+              <span>|</span>
+              <p class="event__tags">
+                <span>WAVE</span>
+                <span>DRONE</span>
+                <span>POST-PUNK</span>
+              <p>
+            </div>
+            <p class="card__description">Discos de Nuestra Señora hacen su misa. Material crudo.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <section class="upcoming-programs">
     <h1 class="fs-display-xl uppercase mb-xl">Próximos programas</h1>
     <div class="events">
@@ -34,7 +162,7 @@
             <span>POST-PUNK</span>
           <p>
         </div>
-        <p class="event__description">Discos de Nuestra Señora hacen su misa. Material crudo.</p>
+        <p class="event__description">Boni G. Miranda</p>
       </div>
 
       <div class="event">
