--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -10,11 +10,12 @@
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
     <script src="//widget.mixcloud.com/media/js/footerWidgetApi.js" async>
-      {
-        "feed": "/lieradio/",
-        "autoplay" : false,
-      }
-    </script>
-    
+  	{
+  		"feed": "/lieradio/",
+  		"autoplay" : true,
+  		"disableUnloadWarning" : true
+  	}
+  	</script>
+
   </head>
   <body>
