--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,7 +1,15 @@
 <header>
-  <nav class="navigation primary-navigation pv-sm">
-    <a href="/">
-      <img class="logo" src="./lie-logo.svg" alt="Lie">
-    </a>
-  </nav>
+  <div class="container container--medium">
+    <nav class="navigation primary-navigation pv-sm">
+      <a href="/">
+        <img class="logo" src="./lie-logo.svg" alt="Lie">
+      </a>
+      <ul class="header-links">
+        <li><a class="header-link" href="https://www.instagram.com/lieradio/">Instagram</a></li>
+        <li><a class="header-link" href="https://www.facebook.com/lieradio/">Facebook</a></li>
+        <li><a class="header-link" href="https://www.mixcloud.com/lieradio/">Mixcloud</a></li>
+        <li><a class="header-link" href="https://soundcloud.com/lieradio">Soundcloud</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
