--- a/site/layouts/partials/contact.html
+++ b/site/layouts/partials/contact.html
@@ -1,4 +1,4 @@
-<section class="contact pv-md">
+<section class="contact pv-xl">
   <div class="container container--medium">
     <p class="about">
       <span>LIE RADIO</span> somos una comunidad de amantes de la música con sede en el corralón de Pasaje Mallol, una zona de gran actividad artística donde convivimos músicos, gatos, diseñadores, gorriones, flamencos, artesanos y otros vecinos. Desde 2013 haciendo mixes, jolgorios y otros rituales musicales. ¿Por qué LIE? Porque Less Is Enough. Porque menos es suficiente, ¿o mentira?.
