--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -5,6 +5,8 @@
     font-weight: 400;
     font-size: units(4);
     color: white;
+    padding-left: units(4);
+    padding-right: units(4);
 
     & > span {
       font-family: "SuisseCondensed";
