--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <main class="page__home">
   {{ partial "header" . }}
-  <!-- {{ partial "video-streaming" . }} -->
+  {{ partial "video-streaming" . }}
 
   <section class="upcoming upcoming--programs">
     <div class="container container--medium pt-xl">
@@ -19,7 +19,7 @@
               <div class="card__date">
                 <p class="card__day">1 ABRIL</p>
                 <span class="card__subtitle-divisor">|</span>
-                <p class="card__hour">16:00 · 17:00</p>
+                <p class="card__hour">18:00 · 19:00</p>
               </div>
               <div class="card__tags">
                 <span class="card__subtitle-divisor">|</span>
@@ -54,7 +54,7 @@
                 <p>
               </div>
             </div>
-            <p class="card__description">Drones punkis, guitarreos wave y ríos de kraut que se teñirán en distintas proporciones de índigo. Claros y oscuros seleccionados por Boni G. Miranda.</p>
+            <p class="card__description">Drones punkis, guitarreos wave y ríos de kraut teñidos en distintas proporciones de índigo. Claros y oscuros seleccionados por Boni G. Miranda.</p>
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
