--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -12,7 +12,7 @@
     <script src="//widget.mixcloud.com/media/js/footerWidgetApi.js" async>
   	{
   		"feed": "/lieradio/",
-  		"autoplay" : true,
+  		"autoplay" : false,
   		"disableUnloadWarning" : true
   	}
   	</script>
